# victron-nut

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Victron NUT Mapping.ods  example.conf
install/data/victron-nut/: initialize.sh  start.sh
install/data/victron-nut/service/: run
install/data/victron-nut/service/log/: run
src/: config.rs  connection.rs  dbus.rs  extensions.rs  http.rs  logic_manager.rs  main.rs
src/commands/: command.rs  command_data.rs  command_reader.rs  command_registry.rs  mod.rs  response.rs
src/commands/handlers/: auth.rs  get.rs  help.rs  instcmd.rs  list.rs  mod.rs  netver.rs  restart.rs  set.rs  starttls.rs  ver.rs
src/nut/: mod.rs  nut_var_manager.rs  nut_var_provider.rs
src/storage/: mod.rs  shutdown_policy_states_store.rs
src/utility/: mod.rs  wake_on_lan.rs
